--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 
 <div id="app"></div>
-<script src="build/app.bundle.js"></script>
+<script src="build/build.production.bundle.js"></script>
 </body>
 </html>
